--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,5 +20,6 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:+'
+    compile 'com.github.nkzawa:socket.io-client:0.1.1'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
