--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,6 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:+'
-    compile 'com.github.nkzawa:socket.io-client:0.1.1'
+    compile "org.java-websocket:Java-WebSocket:1.3.0"
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
