--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,17 @@
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "19.0.3"
+    compileSdkVersion 22
+    buildToolsVersion '22.0.1'
 
     defaultConfig {
-        minSdkVersion 11
+        minSdkVersion 14
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
     }
     buildTypes {
         release {
-            runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
@@ -20,6 +19,9 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:+'
-    compile "org.java-websocket:Java-WebSocket:1.3.0"
+    compile 'com.github.nkzawa:socket.io-client:0.5.0'
+    compile 'com.tonicartos:superslim:0.4.13'
+    compile 'org.apmem.tools:layouts:1.9@aar'
+    compile 'com.mcxiaoke.volley:library:1.0.+@aar'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
