--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,32 +5,47 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_LOGS" />
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <application
+        android:name="org.pimatic.app.PimaticApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name="org.pimatic.app.PimaticApplication">
+        android:theme="@style/AppTheme">
         <activity
             android:name="org.pimatic.app.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="SettingsActivity"></activity>
+        <activity android:name="org.pimatic.app.SettingsActivity"></activity>
+        <activity android:name="org.pimatic.accounts.PimaticAccountAuthenticatorActivity"></activity>
+        <activity android:name="org.pimatic.accounts.AccountTestActivity"></activity>
+        <activity android:name="org.pimatic.app.AccountsActivity"></activity>
         <activity
             android:name="org.pimatic.app.SendLogActivity"
-            android:theme="@android:style/Theme.Dialog"
             android:textAppearance="@android:style/TextAppearance.Large"
+            android:theme="@android:style/Theme.Dialog"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="org.pimatic.app.SEND_LOG" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <service android:name="org.pimatic.accounts.PimaticAuthenticatorService">
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator" />
+        </service>
     </application>
 
 </manifest>
